# ollama-models-api

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py  models.py
app/api/: main.py
app/api/routes/: models.py
app/core/: config.py  db.py
app/static/: index.html  style.css
